--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,5 +43,29 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
 
+  prism:
+    container_name: prism
+    build: ./openapi/
+    ports:
+      - "3030:3030"
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    container_name: swagger-ui
+    environment:
+      - SWAGGER_JSON=/openapi/openapi.yml
+    volumes:
+      - ./openapi/openapi.yml:/openapi/openapi.yml
+    ports:
+      - "3031:8080"
+  redoc:
+    image: redocly/redoc
+    container_name: redoc
+    environment:
+      - SPEC_URL=/openapi/openapi.yml
+    volumes:
+      - ./openapi/openapi.yml:/usr/share/nginx/html/openapi/openapi.yml
+    ports:
+      - "3032:80"
+
 volumes:
   db-volume:
