--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
   db:
     image: mysql:8.0.34
     container_name: mysql
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
       - db-volume:/var/lib/mysql
+      - ./conf/mysql:/etc/mysql/conf.d/
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
