--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -38,6 +38,7 @@ gem "rack-cors"
 
 gem 'devise'
 gem 'devise_token_auth'
+gem 'omniauth', '>= 1.0.0'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
